--- a/demo_loader/pom.xml
+++ b/demo_loader/pom.xml
@@ -16,9 +16,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.hortonworks.metron</groupId>
-    <artifactId>csv-loader</artifactId>
+    <artifactId>demo-loader</artifactId>
     <version>0.4.0</version>
-    <name>CSV Loader</name>
+    <name>Demo CSV Loader</name>
     <dependencies>
         <dependency>
           <groupId>org.apache.metron</groupId>
